--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <title>Glare</title>
+    <title>Glare Finance</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
