--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <meta
       name="description"
-      content="Glare"
+      content="Glare Finance"
     />
     <link
       rel="apple-touch-icon"
@@ -36,7 +36,7 @@
     <meta name="twitter:title" content="Serum DEX" />
     <meta
       name="twitter:description"
-      content="Glare"
+      content="Glare Finance"
     />
     <meta name="twitter:image" content="https://i.imgur.com/YS5Csfy.png" />
     <!--
