--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="keywords"
-      content="Serum, SRM, Serum DEX, DEFI, Decentralized Finance, Decentralised Finance, Crypto, ERC20, Ethereum, Decentralize, Solana, SOL, SPL, Cross-Chain, Trading, Fastest, Fast, SerumBTC, SerumUSD, SRM Tokens, SPL Tokens"
+      content=""
     />
     <meta
       name="description"
-      content="Serum - The world's first completely decentralized derivatives exchange with trustless cross-chain trading"
+      content="Glare Finance"
     />
     <link
       rel="apple-touch-icon"
@@ -33,10 +33,10 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Serum DEX" />
+    <meta name="twitter:title" content="Glare Finance" />
     <meta
       name="twitter:description"
-      content="Serum DEX - The world's first completely decentralized derivatives exchange with trustless cross-chain trading"
+      content="Glare Finance"
     />
     <meta name="twitter:image" content="https://i.imgur.com/YS5Csfy.png" />
     <!--
@@ -60,7 +60,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <title>Serum</title>
+    <title>Glare Finance</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
